--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Indovina il numero</h1>
-    <p>Scrivi un numero da 1 a 100,<br> e indovinalo in meno passaggi possibili!</p>
+    <p>Scrivi un numero da 1 a 100 e<br> indovinalo in meno passaggi possibili!</p>
     <p id="result"></p>
     <div class="submit">
         <input type="number" id="guess">
