--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p id="result"></p>
     <div class="submit">
         <input type="number" id="guess">
-        <button id="submit">Conferma</button>
+        <button id="submit">conferma</button>
     </div>
     <script src="./script.js"></script>
 </body>
